# pre-commit-hook-lxml

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements.txt  setup.cfg
pre-commit-hooks/: lxml_format.py
pre_commit_hooks/: lxml_format.py
