[metadata]
name = lxml_format
version = 0.1.0
description = Run lxml on your files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/efrecon/pre-commit-hook-lxml
author = Emmanuel Frecon
author_email = efrecon+github@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
install_requires =
    lxml
    editorconfig

[options.packages.find]
exclude =
    hooks*

[options.entry_points]
console_scripts =
    lxml_format = pre_commit_hooks.lxml_format:main